--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,68 @@ hr {
     margin: 1em 0;
     padding: 0;
 }
+body {
+  text-align: center;
+  background-image: url("LilGod.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: transparent;
+}
+
+li {
+  float: left;
+}
+
+li a, .dropbtn {
+  display: block;
+  color: white;
+  tex-align: center;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn{
+  background-color: lightgray;
+  color: white;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
 /*
  * Remove the gap between audio, canvas, iframes,
  * images, videos and the bottom of their containers:
