--- a/css/main.css
+++ b/css/main.css
@@ -43,66 +43,78 @@ hr {
 }
 body {
   text-align: center;
-  background-image: url("LilGod.jpg");
+  background-image: url("sky.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+.score {
+  color: white;
+  font-size: 18px;
+  text-align: center;
+}
+
+.navbar{
+  overflow:hidden;
   background-color: transparent;
 }
 
-li {
+.navbar a {
   float: left;
-}
-
-li a, .dropbtn {
-  display: block;
+  font-size: 16px;
   color: white;
-  tex-align: center;
-  padding: 8px 16px;
+  text-align: center;
+  padding: 12px 16px;
   text-decoration: none;
 }
 
-li a:hover, .dropdown:hover .dropbtn{
-  background-color: lightgray;
-  color: white;
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-li.dropdown {
-  display: inline-block;
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover, .dropbtn, .dropbtn:focus {
+  background-color: lightgray;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: lightgray;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
+  float: none;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
+  display:block;
   text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
-.dropdown:hover .dropdown-content {
+.show {
   display: block;
 }
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
+
 /*
  * Remove the gap between audio, canvas, iframes,
  * images, videos and the bottom of their containers:
