--- a/css/main.css
+++ b/css/main.css
@@ -91,17 +91,26 @@ form {
 
 .parallaxPage-section1 {
   background: lightcoral;
-  height: 700px;
+  height: 800px;
 }
 
 .section1-Header {
-  font-size: 40px;
+  font-size: 60px;
   font-family: "Brush Script MT";
   color: rgba(29, 29, 30, 1);
   font-weight: bold;
   border-bottom: 4px solid rgba(47, 47, 48, 1);
 }
 
+.section1-Paragraph {
+  font-size:20px;
+  font-family: Verdana;
+  text-indent: 5vw;
+  text-align: justify;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  color: rgba(49, 50, 51, 1);
+}
 
 .active {
   background-color: green;
